--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,9 @@
 }
 
 body {
+  padding: 100px;
+  max-width: 800px;
+  margin: 0 auto;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,4 +27,16 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+h1 {
+  font-size: xx-large;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+h2 {
+  font-size: x-large;
+  font-weight: bold;
+  margin: 5px 0;
 }
